image white space fixed

--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ footer p{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 38%;
+  width: auto;
   margin: 0 auto;
 }
 #eidCard{
@@ -212,7 +212,7 @@ footer p{
 
 @media (max-width: 935px) {
   #content {
-    width: 100%;
+    width: auto;
   }
 
 }
